Demon Guide: Updated Mara and Izanami

--- a/index.html
+++ b/index.html
@@ -1038,34 +1038,32 @@
                     <p><strong><a id="Mara" href="javascript:void(0)" @click="show_guide_devil('Mara')">Mara</a></strong></p>
                     <p>Strong phys unit with a unique skill Hell Thrust (Gee i wonder why its called that), doing
                         multiple hits and having a chance to charm enemies on hit. Naturally Mara has amazing
-                        strength
-                        and luck but is quite squishy so he can fall pretty easily. He's the only
-                        fusable
-                        demon in the game with Phys Pierce (Huang Di has it too but is gacha only) and so like the
+                        strength and luck but is quite squishy so he can fall pretty easily. He's the only
+                        fusable demon in the game with Phys Pierce (Huang Di has it too but is gacha only) and so like the
                         other pierce users in the game, Purple is his best archetype. He also comes with Null Bind
-                        (meh) and Titanomachia for sweeping so enemies will fall quite quickly to him.
+                        (meh) and Titanomachia for sweeping.
                     </p>
                     <div id="DemonGuideTable">
                       <p><table>
                         <tbody>
                           <tr><td id="DemonGuide-Common"><b>Common</b></td>
-                              <td>TODO: <b>Megaton Raid</b></td>
+                              <td><b>Megaton Raid</b> gives him a single target skill i guess. Even so go for Purple.</td>
                               <td>Bad</td>
                           </tr>
                           <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
-                              <td>TODO: <b>Soul Drain</b></td>
+                              <td>Mara is a physical unit so <b>Soul Drain</b> won't do much at all. Regardless so go for Purple.</td>
                               <td>Bad</td>
                           </tr>
                           <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
-                              <td>TODO: <b>Charge</b></td>
+                              <td><b>Charge</b> can be transfered and even with the -1 mp cost, it doesn't warrant being better than Purple</td>
                               <td>Bad</td>
                           </tr>
                           <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                              <td><b>Phys Pierce</b> means enemies cannot resist the might of Mara (Pierce just blows out all competition out of the water).</td>
+                              <td><b>Phys Pierce</b> means enemies cannot resist the might of Mara (Pierce just blows out all other archetypes out of the water).</td>
                               <td><b>Best</b></td>
                           </tr>
                           <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
-                              <td>TODO: <b>Null Ice</b></td>
+                              <td><b>Null Ice</b> would cover his weakness, but then he wouldn't be able to pierce, it wouldn't be worth that cost.</td>
                               <td>Bad</td>
                           </tr>
                         </tbody>
@@ -1073,29 +1071,22 @@
                     </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
-                        <li>Resist Ice. Gotta cover his weakness up.</li>
+                        <li>Resist Ice. To give him protection.</li>
                         <li>Phys Boost. So he can hit harder... faster... stronger... better.</li>
                     </ul>
                     <p><strong>Brands:</strong> Divine/Ward. Both Hell Thrust and Titanomachia costs 7 mp, so you
-                        can't
-                        two turn them with War. Though if you don't mind waiting then War would strengthen his
-                        damage
-                        further.
+                        can't two turn them with War. Though if you don't mind waiting, then War would strengthen his damage further.
                     </p>
                 </b-card>
                 <!-- [Izanami] -->
                 <b-card>
                     <p><strong><a id="Izanami" href="javascript:void(0)" @click="show_guide_devil('Izanami')">Izanami</a></strong></p>
                     <p>A really strong magical demon with good survivability as well. She utilizes the unique skill
-                        Yomotsu Okami which, as long as she's alive Elec and Dark attacks do 10% more damage for
-                        all
+                        Yomotsu Okami which, as long as she's alive Elec and Dark attacks do 10% more damage for all
                         party members. This means she's useful for setups with demons such as Purple Thor (Elec
-                        pierce)
-                        and Black Frost (Go To Hell! has dark pierce attached to it). Even without them, she
-                        herself
-                        comes with Bolt Storm and Merciless blow meaning if you face a elec weak demon they'd get
-                        fried
-                        to a crisp.
+                        pierce) and Black Frost (Go To Hell! has dark pierce attached to it). Even without them, she
+                        herself comes with Bolt Storm and Merciless blow meaning if you face a elec weak demon they'd get
+                        fried to a crisp.
                     </p>
                     <div id="DemonGuideTable">
                       <p><table>
@@ -1106,21 +1097,22 @@
                               <td>Usable</td>
                           </tr>
                           <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
-                              <td><b>Hell Gaze</b> goes well with her unique passive and is quite powerful too, 180 power
+                              <td><b>Hell Gaze</b> goes well with her unique passive and is quite powerful too, 180 power with -1 mp cost 
                                   will hit hard.</td>
                               <td>Usable</td>
                           </tr>
                           <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
-                              <td><b>Concentrate</b> enables you to turn her into a sweeper if you like. Though if you
-                                  want to cover her weakness you'd only be able to pick one additional skill.</td>
+                              <td><b>Concentrate</b> would pair up well with a single target skill (given she doesn't pierce).</td>
                               <td>Usable</td>
                           </tr>
                           <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                              <td><b>Elec Amp</b> boosts her elec damage even further</td>
+                              <td><b>Elec Amp</b> boosts her elec damage even further. You would either stack this with Elec Boost + cover her weakness 
+                              or cover her weakness and go with another skill</td>
                               <td>Usable</td>
                           </tr>
                           <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
-                              <td>TODO:<b>Repel Ice</b></td>
+                              <td><b>Repel Ice</b> would go well with Alilat to prevent Purple Rama from piercing your team. She naturally has Null Ice however so this 
+                              is not that great.</td>
                               <td>Bad</td>
                           </tr>
                         </tbody>
@@ -1128,15 +1120,14 @@
                     </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
-                        <li>Resist Fire. Weakness should be covered</li>
+                        <li>Resist Fire. To cover her weakness</li>
                         <li>Elec Boost. Goes well with Elec Amp, though if you take resist as well you'd be
-                            conjuring
-                            Bolt Storms all day and night Dark skill. To take advantage of her passive</li>
+                            conjuring Bolt Storms all day and night.
+                        <li>Dark skill. To take advantage of her passive</li>
                         <li>Dark boost. Pair with Red or a dark skill if you don't want to cover her weakness.</li>
                     </ul>
-                    <p><strong>Brands:</strong> Magic type is fine since Bolt Storm doesn't cost much. Hell Gaze
-                        will
-                        cost 6mp, go with Divine if you want to use it off the bat in pvp.
+                    <p><strong>Brands:</strong> Spell is fine since Bolt Storm doesn't cost much. For Aragami, Hell Gaze
+                        will cost 6mp, go with Divine if you want to use it off the bat in pvp. Life is also good since she's quite bulky.
                     </p>
                 </b-card>
                 <!-- [Alice] -->
